# Landing-Assist-Module-LAM

./: .gitignore  README.MD  README.md
AirSim_config/: settings.json
geometric_feature_detection/flatness/: README.md
install/: local_setup.sh  setup.sh
install/octomap_ros/share/octomap_ros/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pointcloud_plane_detection/share/pointcloud_plane_detection/: package.sh
install/pointcloud_publisher/lib/pointcloud_publisher/: pointcloud_subscriber
install/pointcloud_publisher/share/pointcloud_publisher/: package.sh
log/: latest_build
my_bag2/: metadata.yaml
ros2/: .gitignore  3_7_2024.pcd  map.bt  map.pcd  map3.bt  mapn.bt
ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/log/: latest_build
ros2/src/: deps.repos  readme.md
ros2/src/install/: local_setup.sh  setup.sh  setup.zsh
ros2/src/log/: latest_build
ros2/src/my_octomap_converter/: CMakeLists.txt  package.xml
ros2/src/my_octomap_converter/src/: octomap_to_pcd.cpp  pcd_to_octomap.cpp
ros2/src/pcd_converter/: CMakeLists.txt  package.xml
ros2/src/pcd_converter/src/: bt_to_pcd_service.cpp
ros2/src/pointcloud_plane_segmentation/: package.xml  setup.cfg  setup.py
ros2/src/pointcloud_plane_segmentation/launch/: plane_segmentation_launch.py
ros2/src/pointcloud_plane_segmentation/pointcloud_plane_segmentation/: plane_segmentation.py
ros2/src/pointcloud_publisher/: setup.py
rviz_config/: default.rviz  octomap.rviz  planeDetection.rviz  rosbag.rviz
(+53 files in other folders)
